Upload shapeName to base class
* Get shape name in the base class instead of inherited classes

--- a/SpreadEX/SpreadEX.csproj
+++ b/SpreadEX/SpreadEX.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DrawLib\BaseShape.cs" />
+    <Compile Include="DrawLib\Circle.cs" />
     <Compile Include="DrawLib\Coordinates.cs" />
     <Compile Include="DrawLib\Rectangle.cs" />
     <Compile Include="DrawLib\Square.cs" />
