--- a/SpreadEX/SpreadEX.csproj
+++ b/SpreadEX/SpreadEX.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DrawLib\BaseShape.cs" />
+    <Compile Include="DrawLib\Widget.cs" />
     <Compile Include="DrawLib\Circle.cs" />
     <Compile Include="DrawLib\Coordinates.cs" />
     <Compile Include="DrawLib\Ellipse.cs" />
@@ -56,6 +56,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
